Fixade länkarna till bilderna.

--- a/report/sensors.tex
+++ b/report/sensors.tex
@@ -17,7 +17,7 @@ With this implementation the daggerboard itself will not be disassembled or modi
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = .7\textwidth]{Figures/Prototyp_1.png}
-	\caption{Function of first prototype.}
+	\captionsource{Function of first prototype.}{Author}
 	\label{Press_sens_impl}
 \end{center}
 \end{figure}
@@ -32,7 +32,7 @@ The prototype of the pressure sensor was created in order to show the function o
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = .45\textwidth]{Figures/Press_sens_prot_1.jpg}
-	\caption{First prototype of a force sensor.}
+	\captionsource{First prototype of a force sensor.}{Author}
 	\label{Press_sens_prot_1}
 \end{center}
 \end{figure}
@@ -45,7 +45,7 @@ In the second prototype load cells, which are sensors that utilizes strain gauge
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = .45\textwidth]{Figures/Press_sens_func_2.png}
-	\caption{Function of second prototype.}
+	\captionsource{Function of second prototype.}{Author}
 	\label{Press_sens_prot_2}
 \end{center}
 \end{figure}
@@ -60,7 +60,7 @@ From the datasheet\cite{load_cell}, the voltage readings of this part could be c
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = .45\textwidth]{Figures/Load_cell.png}
-	\caption{Load cell, \emph{FX1901}.}
+	\captionsource{Load cell, \emph{FX1901}.}{\url{http://uk.farnell.com/sensor-solutions-te-connectivity/fx1901-0001-0100-l/compression-load-cell-45-4kg-5vdc/dp/2771943}}
 	\label{Load_cell}
 \end{center}
 \end{figure}
@@ -77,7 +77,7 @@ The implementation is easy and the gain can easily be determined by connecting a
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = .8\textwidth]{Figures/INA126_pinout.png}
-	\caption{Amplifier \emph{INA126} for the load cell signal.}
+	\captionsource{Amplifier \emph{INA126} for the load cell signal.}{\url{http://www.ti.com/lit/ds/symlink/ina126.pdf}}
 	\label{INA126}
 \end{center}
 \end{figure}
@@ -97,7 +97,7 @@ A suitable product was found, it is accurate and reliable, the \emph{Micro epsil
 \begin{figure}[H]
 \begin{center}
 	\includegraphics[width = .45\textwidth]{Figures/microepsilon_mk30.png}
-	\caption{Linear draw wire sensor, Micro epsilon MK30.}
+	\captionsource{Linear draw wire sensor, Micro epsilon MK30.}{\url{http://www.tracepartsonline.net/partdetails.aspx?PartID=30-18012011-094271&class=MICRO_EPSILON&clsid=/F_MICRO_EPSILON/MICRO_EPSILON.010/MICRO_EPSILON.010.030/}}
 	\label{Draw_sensor}
 \end{center}
 \end{figure}
@@ -112,7 +112,7 @@ By the fact that the sensor must be waterproof the signal has to go through a me
 \begin{figure}[H]
 	\centering
 	\includegraphics[width = .45\textwidth]{Figures/Adafruit_height_sensor.jpg}
-	\caption{Time of flight, $\mu$\gls{lidar}, distance sensor \emph{Adafruit VL53L0X}.}
+	\captionsource{Time of flight, $\mu$\gls{lidar}, distance sensor \emph{Adafruit VL53L0X}.}{\url{https://www.amazon.com/Adafruit-Industries-DISTANCE-3317-Evaluation/dp/B06XPVJCZJ}}
 	\label{micro_lidar}
 \end{figure}
 
@@ -121,7 +121,7 @@ All the information about this sensor and the usage of a cover widow can be foun
 \begin{figure}[H]
 	\centering
 	\includegraphics[width = .8\textwidth]{Figures/height_measure.jpg}
-	\caption{Height measurement model.}
+	\captionsource{Height measurement model.}{Author}
 	\label{height_measure}
 \end{figure}
 
