Fix captionsource problems

--- a/report/android.tex
+++ b/report/android.tex
@@ -25,7 +25,7 @@ Sending data back to the child activity is done by calling the method ``\emph{st
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.8\textwidth]{Figures/activity_lifecycle.png}
-\caption{Activity lifecycle.\\\textbf{Source:} Author}
+\captionsource{Activity lifecycle.}{ Author}
 \label{android-activity}
 \end{figure}
 
@@ -33,7 +33,7 @@ The Bluetooth connection and data logging class is implemented as a services\cit
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.8\textwidth]{Figures/service_lifecycle.png}
-\caption{Activity lifecycle.}
+\captionsource{Service lifecycle.}{Author}
 \label{android-service}
 \end{figure}
 
