--- a/report/kf.tex
+++ b/report/kf.tex
@@ -36,7 +36,7 @@ The Body frame denoted $b$-frame is the sensitive axes of the \gls{imu}'s sensor
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.5\textwidth]{Figures/Euler_angle.pdf}
-\captionsource{Body Frame.}{\url{https://http://moziru.com/images/row-boat-clipart-transparent-4.png}}
+\captionsource{Body Frame.}{\url{https://moziru.com/images/row-boat-clipart-transparent-4.png}}
 \label{Fig:body_frame}
 \end{figure}
 
@@ -293,7 +293,7 @@ The Navigation frame Inertial Navigation System can now be seen in \autoref{Fig:
 \begin{figure}[H]
 \centering
 \includegraphics[width=.9\textwidth]{Figures/ins_2.jpg}
-\captionsource{The Intertial Navigation block diagram.}{\url{https://https://forum.pololu.com/t/ahrs-system-and-inertial-navigation-system/11501}}
+\captionsource{The Intertial Navigation block diagram.}{\url{https://forum.pololu.com/t/ahrs-system-and-inertial-navigation-system/11501}}
 \end{figure}
 
 \section{Implementation of Sensor Fusion Using a Kalman Filter.}
