--- a/report/main.tex
+++ b/report/main.tex
@@ -67,12 +67,8 @@
 
 % Figure caption source
 \newcommand*{\captionsource}[2]{%
-  \caption[{#1}]{%
-    #1%
-    \\\hspace{\linewidth}%
-    \textbf{Source:} #2%
-}%
-}
+  \caption[{#1}]{#1}\par
+  \textbf{Source:} #2\par}
 
 % header style
 \pagestyle{fancy}
