--- a/report/physics.tex
+++ b/report/physics.tex
@@ -11,7 +11,7 @@ and are represented in \autoref{points-sail}. A sailor wants to prevent the sail
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.6\textwidth]{Figures/Points_of_sail.jpg}
-\caption{Points of sail.}
+\captionsource{Points of sail.}{\url{https://en.wikipedia.org/wiki/Forces_on_sails}}
 \label{points-sail}
 \end{figure}
 \begin{figure}[H]
