Fixes, updates, sources and such.

--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -60,11 +60,19 @@
 \end{figure}
 
 \clearpage
-\section{Other Figures}
+\subsection{UML model}
+\begin{figure}[H]%Can this be put in the Appendix? It is very large and detailed.
+	\centering
+	\includegraphics[height =\linewidth, angle = 90]{Figures/uml.png}
+	\caption{\gls{uml} model.}
+	\label{android-uml}
+\end{figure}
+
+\clearpage
 \subsection{Casing Dimensions}
 \begin{figure}[htb]
 	\centering
-    \includegraphics[width=\linewidth]{Figures/casing_dimensions.png}
+    \includegraphics[height=.8\linewidth, angle = 270]{Figures/casing_dimensions.png}
 	\captionsource{System enclosure shape and dimensions}{Author}
 	\label{fig:casdim}
 \end{figure}
