--- a/report/casing.tex
+++ b/report/casing.tex
@@ -53,7 +53,7 @@ When building the third version on the 3D-printer the problems with the model co
 \end{figure}
 
 \subsection{Fourth and final  revision}
-The fourth revision had all the features and could hold all the electronics. It was designed to house the power switch in the front, the Time of Flight sensor on the top, the load cells, the batteries and both the \gls{pcb}s in the same enclosure. The access panel was placed at the bottom of the model to get a better water seal. The access panel was a big plate covering most of the bottom of the model. To ensure a watertight case, a seal between the panel and the casing itself could be added. 
+The fourth revision had all the features and could hold all the electronics. It was designed to house the power switch in the front, the \gls{tof} sensor on the top, the load cells, the batteries and both the \gls{pcb}s in the same enclosure. The access panel was placed at the bottom of the model to get a better water seal. The access panel was a big plate covering most of the bottom of the model. To ensure a watertight case, a seal between the panel and the casing itself could be added. 
 
 Due to the material cost and time it takes for the 3D printer to produce models the manufactured part has just some thin layers in the bottom part of the print. To get the some strength in the model epoxy resin was mixed and poured in to both get the stability needed and a clear window for the \gls{tof} sensor, see \autoref{Case_rev_4} for reference.
 
