--- a/report/titlepage.tex
+++ b/report/titlepage.tex
@@ -35,10 +35,10 @@
 		\emph{Authors}\\
 		Axelsson, Oskar, \\ 
 		Brolin, Daniel, \\ 
-		Eriksson, Kenny \\ 
-		Grape, Elias \\ 
+		Eriksson, Kenny, \\ 
+		Grape, Elias, \\ 
 		Lundberg, Josef, \\ 
-		Sjölund, Johannes \\
+		Sjölund, Johannes, \\
 		Theolin, Henrik\\
 	\end{flushleft}
 \end{minipage}
