--- a/report/main.tex
+++ b/report/main.tex
@@ -14,6 +14,7 @@
 \usepackage{enumitem}
 \usepackage{scrextend}
 \usepackage{graphicx, xcolor}
+\usepackage{wrapfig}
 \usepackage{rotating}
 \usepackage{subcaption, float}
 %\usepackage[sc]{titlesec}
